--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -15,7 +15,7 @@
               Дата: {{ post.date }}
             </li>
             <li>
-              Категория: <a href="{% url 'blog:category' post.category %}" >{{ post.category }}</a>
+              Категория: <a href="{% url 'blog:category_posts' post.category %}" >{{ post.category }}</a>
           </ul>
           <p>
             {{ post.text }}
