--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -14,13 +14,13 @@
               {{ post.location }}
             </li>
             <li>
-              Категория: <a href="{% url 'blog:category' post.category %}">{{ post.category }}</a>
+              Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
             </li>
           </ul>
           <p>
             {{ post.text|truncatewords:10 }}
           </p>
-          <a href="{% url 'blog:posts' post.id %}">Читать полный текст</a>
+          <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
         </article>
         {% endfor %}
       </div>
